# PyISV

./: .gitignore  PyISV.ipynb  PyISV.py  PyISV_predictions.ipynb  PylSV.ipynb  README.md  config.yaml  config_autoencoder.yaml  config_autoencoder_cpu.json  config_autoencoder_gpu.json  config_classification.yaml  debug_config.json  generate_RDFs.py  predictions.pt  run_mono.sh  setup.cfg  setup.py
ExampleScripts/: compute_single_rdf.py  compute_triple_rdf.py  compute_triple_rdf_ordered.py  model_evaluation_script.py  model_training_script.py
PyISV/: __init__.py  autoencoder_utils.py  classification_utils.py  define_paths.py  define_root.py  features_calc_utils.py  kde_rdf.py  model_building.py  network.py  network2_2D.py  network3_2D.py  network_2D.py  network_2D_classification.py  network_arxiv.py  network_autoencoder.py  network_classification.py  network_ret.py  network_ret_old.py  network_soap.py  network_spectra.py  network_triple.py  neural_network.py  set_architecture.py  train_utils.py  train_utils_classification.py  training_helpers.py  training_utilities.py  training_utils.py  validation_helpers.py  validation_utils.py
RDFs/: labels.pt
Scripts/: analyze_profiler_trace.py  compare_dataloader_performance.py  compute_single_rdf.py  compute_triple_rdf.py  evaluation_autoencoder.py  generate_RDFs.py  inspect_data.py  model_evaluation_script.py  model_training_script.py  run_training_classification.py  train_autoencoder.py  train_classification.py
logs/: train_autoencoder_log.txt  train_classification_log.txt  train_log.txt
models/: best_autoencoder_model.pth  (+10 more)
(+87 files in other folders)
